Resolve issues with replacing AppTile's css name
See 8dda0bc ; replacing the css name of BzAppTile caused GtkButton's
default styling to go away. This commit adds a new wrapper widget
which claims the css name "app-tile" and allows curated configs to
style tiles without these consequences.

--- a/src/meson.build
+++ b/src/meson.build
@@ -62,6 +62,7 @@ bz_sources = [
   'bz-comet.c',
   'bz-content-provider.c',
   'bz-content-section.c',
+  'bz-curated-app-tile.c',
   'bz-data-graph.c',
   'bz-data-point.c',
   'bz-decorated-screenshot.c',
@@ -137,6 +138,7 @@ blueprints = custom_target('blueprints',
     'bz-app-tile.blp',
     'bz-browse-widget.blp',
     'bz-category-dialog.blp',
+    'bz-curated-app-tile.blp',
     'bz-decorated-screenshot.blp',
     'bz-detailed-app-tile.blp',
     'bz-entry-inspector.blp',
