Category buttons rework (#341)
* initial category button commit

* Add 6 graphics taken from Software for the categories

* Use the 6 initial graphics in categories ui

i also made sure the categories look sensible without icons in case the API result ever changes.

* Add the 4 missing category icons

* add per category button styling

Having custom styling allows the buttons to have contrast in both dark and light style

* bring localization macro inline with others for flathub category

--- a/src/meson.build
+++ b/src/meson.build
@@ -60,6 +60,7 @@ bz_sources = [
   'bz-transaction-task.c',
   'bz-backend.c',
   'bz-browse-widget.c',
+  'bz-category-tile.c',
   'bz-category-dialog.c',
   'bz-comet-overlay.c',
   'bz-comet.c',
@@ -140,6 +141,7 @@ blueprints = custom_target('blueprints',
     'bz-addons-dialog.blp',
     'bz-app-tile.blp',
     'bz-browse-widget.blp',
+    'bz-category-tile.blp',
     'bz-category-dialog.blp',
     'bz-curated-app-tile.blp',
     'bz-decorated-screenshot.blp',
